replicating origin URL

--- a/index.html
+++ b/index.html
@@ -364,6 +364,8 @@
   </script>
   <script>
 
+    var originURL = 'https://frantic0.github.io/sema-engine';
+
     const setupEditorWithContent = ( elementId, contentFileRelativeURL ) => {
 
       let textArea = document.getElementById(elementId);
