updating example with event subscription

--- a/assets/index.html
+++ b/assets/index.html
@@ -271,10 +271,8 @@
 
       learner = new Learner();
       if(engine){
-        // engine.addEventListener('onSharedBuffer', e => learner.pushSharedBuffer(e) ); // Engine's SAB emissions subscribed by Learner
-        // learner.addEventListener('onSharedBuffer', e => engine.pushSharedBuffer(e) );  // Learner's SAB emissions subscribed by Engine
-        engine.addEventListener('onSharedBuffer', learner.pushSharedBuffer ); // Engine's SAB emissions subscribed by Learner
-        learner.addEventListener('onSharedBuffer', engine.pushSharedBuffer );  // Learner's SAB emissions subscribed by Engine
+        engine.addEventListener('onSharedBuffer', e => learner.pushSharedBuffer(e) ); // Engine's SAB emissions subscribed by Learner
+        learner.addEventListener('onSharedBuffer', e => engine.pushSharedBuffer(e) );  // Learner's SAB emissions subscribed by Engine
       }
       await learner.init(originURL); // when Learner initializes
 
